Exclusively use gossip for DAG replication.
In retrospect, the rbc was highly inappropriate