@@ -7,11 +7,12 @@
 package com.salesforce.apollo.ethereal;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.time.Duration;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.List;
@@ -43,6 +44,8 @@ import com.salesforce.apollo.crypto.DigestAlgorithm;
 import com.salesforce.apollo.crypto.JohnHancock;
 import com.salesforce.apollo.crypto.SignatureAlgorithm;
 import com.salesforce.apollo.crypto.Signer.SignerImpl;
+import com.salesforce.apollo.crypto.Verifier;
+import com.salesforce.apollo.crypto.Verifier.DefaultVerifier;
 import com.salesforce.apollo.ethereal.Ethereal.Controller;
 import com.salesforce.apollo.ethereal.Ethereal.PreBlock;
 import com.salesforce.apollo.ethereal.PreUnit.preUnit;
@@ -83,16 +86,21 @@ public class EtherealTest {
     }
 
     @Test
-    public void fourWay() throws Exception {
+    public void large() throws Exception {
 
-        short nProc = 4;
+        short nProc = 31;
         CountDownLatch finished = new CountDownLatch(nProc);
         ChannelConsumer<PreUnit> synchronizer = new ChannelConsumer<>(new LinkedBlockingDeque<>());
 
         List<Ethereal> ethereals = new ArrayList<>();
         List<DataSource> dataSources = new ArrayList<>();
         List<Controller> controllers = new ArrayList<>();
-        var builder = Config.deterministic().setExecutor(ForkJoinPool.commonPool()).setnProc(nProc);
+        final var cpks = IntStream.range(0, nProc).mapToObj(i -> Utils.getMember(i)).toList();
+        final var verifiers = cpks.stream()
+                                  .map(c -> (Verifier) new DefaultVerifier(c.getX509Certificate().getPublicKey()))
+                                  .toList();
+        var builder = Config.deterministic().setExecutor(ForkJoinPool.commonPool()).setnProc(nProc)
+                            .setVerifiers(verifiers.toArray(new Verifier[verifiers.size()]));
 
         List<List<PreBlock>> produced = new ArrayList<>();
         for (int i = 0; i < nProc; i++) {
@@ -104,6 +112,107 @@ public class EtherealTest {
             var ds = new SimpleDataSource();
             final short pid = i;
             List<PreBlock> output = produced.get(pid);
+            builder.setSigner(new SignerImpl(0, cpks.get(i).getPrivateKey()));
+            var level = new AtomicInteger();
+            var controller = e.deterministic(builder.setSigner(new SignerImpl(0, cpks.get(pid).getPrivateKey()))
+                                                    .setPid(pid).build(),
+                                             ds, (pb, last) -> {
+                                                 if (pid == 0) {
+                                                     System.out.println("Preblock: " + level.incrementAndGet());
+                                                 }
+                                                 output.add(pb);
+                                                 if (last) {
+                                                     finished.countDown();
+                                                 }
+                                             }, pu -> synchronizer.getChannel().offer(pu));
+            ethereals.add(e);
+            dataSources.add(ds);
+            controllers.add(controller);
+            for (int d = 0; d < 500; d++) {
+                ds.dataStack.add(ByteMessage.newBuilder()
+                                            .setContents(ByteString.copyFromUtf8("pid: " + pid + " data: " + d)).build()
+                                            .toByteString());
+            }
+        }
+        TestGossiper gossiper = new TestGossiper(controllers.stream().map(c -> c.orderer()).toList());
+        try {
+            controllers.forEach(e -> e.start());
+            gossiper.start(Duration.ofMillis(5));
+            finished.await(1360, TimeUnit.SECONDS);
+        } finally {
+            gossiper.close();
+            controllers.forEach(e -> e.stop());
+        }
+        final var first = produced.stream().filter(l -> l.size() == 87).findFirst();
+        assertFalse(first.isEmpty(), "No process produced 87 blocks");
+        List<PreBlock> preblocks = first.get();
+        List<String> outputOrder = new ArrayList<>();
+        int success = 0;
+        for (int i = 0; i < nProc; i++) {
+            final List<PreBlock> output = produced.get(i);
+            if (output.size() != 87) {
+                System.out.println("Did not get all expected blocks on: " + i);
+                break;
+            }
+            for (int j = 0; j < preblocks.size(); j++) {
+                var a = preblocks.get(j);
+                var b = output.get(j);
+                if (a.data().size() != b.data().size()) {
+                    System.out.println("Mismatch at block: " + j + " process: " + i);
+                    break;
+                }
+                boolean s = true;
+                for (int k = 0; k < a.data().size(); k++) {
+                    if (a.data().get(k) != b.data().get(k)) {
+                        s = false;
+                        System.out.println("Mismatch at block: " + j + " unit: " + k + " process: " + i + " expected: "
+                        + a.data().get(k) + " received: " + b.data().get(k));
+                        break;
+                    }
+                    outputOrder.add(new String(ByteMessage.parseFrom(a.data().get(k)).getContents().toByteArray()));
+                }
+                if (a.randomBytes() != b.randomBytes()) {
+                    System.out.println("Mismatch random bytea at block: " + j + " process: " + i);
+                    break;
+                }
+                if (s) {
+                    success++;
+                }
+            }
+            var minQuorum = Dag.minimalQuorum(nProc, builder.getBias());
+            assertTrue(success > minQuorum,
+                       "Did not have a majority of processes aggree: " + success + " need: " + minQuorum);
+        }
+    }
+
+    @Test
+    public void fourWay() throws Exception {
+
+        short nProc = 4;
+        CountDownLatch finished = new CountDownLatch(nProc);
+        ChannelConsumer<PreUnit> synchronizer = new ChannelConsumer<>(new LinkedBlockingDeque<>());
+
+        List<Ethereal> ethereals = new ArrayList<>();
+        List<DataSource> dataSources = new ArrayList<>();
+        List<Controller> controllers = new ArrayList<>();
+        final var cpks = IntStream.range(0, nProc).mapToObj(i -> Utils.getMember(i)).toList();
+        final var verifiers = cpks.stream()
+                                  .map(c -> (Verifier) new DefaultVerifier(c.getX509Certificate().getPublicKey()))
+                                  .toList();
+        var builder = Config.deterministic().setExecutor(ForkJoinPool.commonPool()).setnProc(nProc)
+                            .setVerifiers(verifiers.toArray(new Verifier[verifiers.size()]));
+
+        List<List<PreBlock>> produced = new ArrayList<>();
+        for (int i = 0; i < nProc; i++) {
+            produced.add(new CopyOnWriteArrayList<>());
+        }
+
+        for (short i = 0; i < nProc; i++) {
+            var e = new Ethereal();
+            var ds = new SimpleDataSource();
+            final short pid = i;
+            List<PreBlock> output = produced.get(pid);
+            builder.setSigner(new SignerImpl(0, cpks.get(i).getPrivateKey()));
             var controller = e.deterministic(builder.setSigner(new SignerImpl(0,
                                                                               SignatureAlgorithm.DEFAULT.generateKeyPair()
                                                                                                         .getPrivate()))
@@ -123,19 +232,14 @@ public class EtherealTest {
                                             .toByteString());
             }
         }
-        List<Short> ordering = IntStream.range(0, nProc).mapToObj(i -> (short) i).collect(Collectors.toList());
-        synchronizer.consume(msgs -> {
-            Collections.shuffle(ordering);
-            var pus = PreUnit.topologicalSort(msgs);
-            ordering.stream().forEach(pid -> {
-                var controller = controllers.get(pid);
-                controller.input().accept(pus.stream().filter(u -> u.creator() != pid).toList());
-            });
-        });
+        TestGossiper gossiper = new TestGossiper(controllers.stream().map(c -> c.orderer()).toList());
+
         try {
             controllers.forEach(e -> e.start());
+            gossiper.start(Duration.ofMillis(5));
             finished.await(10, TimeUnit.SECONDS);
         } finally {
+            gossiper.close();
             controllers.forEach(e -> e.stop());
         }
         List<PreBlock> preblocks = produced.get(0);
@@ -160,126 +264,5 @@ public class EtherealTest {
                 assertEquals(a.randomBytes(), b.randomBytes());
             }
         }
-    }
-
-    @Test
-    public void rbc() throws Exception {
-        MetricRegistry registry = new MetricRegistry();
-        RouterMetrics metrics = new RouterMetricsImpl(registry);
-
-        ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(10);
-        short nProc = 61;
-        CountDownLatch finished = new CountDownLatch(nProc);
-        SigningMember[] members = new SigningMember[nProc];
-        Map<Digest, Short> ordering = new HashMap<>();
-        Context<Member> context = new Context<>(DigestAlgorithm.DEFAULT.getOrigin().prefix(1), 0.33, nProc);
-        Map<SigningMember, ReliableBroadcaster> casting = new HashMap<>();
-        List<LocalRouter> comms = new ArrayList<>();
-        Parameters.Builder params = Parameters.newBuilder().setExecutor(Executors.newCachedThreadPool())
-                                              .setMetrics(metrics).setBufferSize(500).setContext(context);
-        for (short i = 0; i < nProc; i++) {
-            SigningMember member = new SigningMemberImpl(Utils.getMember(i));
-            context.activate(member);
-            members[i] = member;
-            ordering.put(member.getId(), i);
-        }
-
-        for (int i = 0; i < nProc; i++) {
-            var member = members[i];
-            LocalRouter router = new LocalRouter(member, ServerConnectionCache.newBuilder().setMetrics(metrics),
-                                                 ForkJoinPool.commonPool());
-            comms.add(router);
-            casting.put(member, new ReliableBroadcaster(params.setMember(member).build(), router));
-            router.start();
-        }
-
-        List<Ethereal> ethereals = new ArrayList<>();
-        List<DataSource> dataSources = new ArrayList<>();
-        List<Controller> controllers = new ArrayList<>();
-        var builder = Config.deterministic().setExecutor(Executors.newCachedThreadPool()).setnProc(nProc);
-
-        List<List<PreBlock>> produced = new ArrayList<>();
-        for (int i = 0; i < nProc; i++) {
-            produced.add(new ArrayList<>());
-        }
-
-        for (short i = 0; i < nProc; i++) {
-            var e = new Ethereal();
-            var ds = new SimpleDataSource();
-            final short pid = i;
-            List<PreBlock> output = produced.get(pid);
-            ReliableBroadcaster caster = casting.get(members[pid]);
-            AtomicInteger round = new AtomicInteger();
-            var controller = e.deterministic(builder.setSigner(members[pid]).setPid(pid).build(), ds, (pb, last) -> {
-                if (pid == 0) {
-                    System.out.println("Preblock: " + round.getAndIncrement());
-                }
-                output.add(pb);
-                if (last) {
-                    finished.countDown();
-                }
-            }, pu -> caster.publish(pu.toPreUnit_s()));
-            ethereals.add(e);
-            dataSources.add(ds);
-            controllers.add(controller);
-            for (int d = 0; d < 2500; d++) {
-                ds.dataStack.add(ByteMessage.newBuilder()
-                                            .setContents(ByteString.copyFromUtf8("pid: " + pid + " data: " + d)).build()
-                                            .toByteString());
-            }
-        }
-        try {
-            for (short i = 0; i < nProc; i++) {
-                final short pid = i;
-                var controller = controllers.get(pid);
-                var caster = casting.get(members[pid]);
-                caster.registerHandler((ctx, msgs) -> msgs.forEach(m -> {
-                    var pus = PreUnit.topologicalSort(msgs.stream().map(msg -> {
-                        try {
-                            return PreUnit.from(PreUnit_s.parseFrom(msg.content()), DigestAlgorithm.DEFAULT);
-                        } catch (Throwable t) {
-                            t.printStackTrace();
-                            return null;
-                        }
-                    }).collect(Collectors.toList()));
-                    controller.input().accept(pus);
-//                    System.out.println("Input: "+ pu + " on: " + caster.getMember());
-                }));
-                caster.start(Duration.ofMillis(100), scheduler);
-            }
-            Thread.sleep(2);
-            controllers.forEach(e -> e.start());
-
-            finished.await(300, TimeUnit.SECONDS);
-        } finally {
-            casting.values().forEach(e -> e.stop());
-            controllers.forEach(e -> e.stop());
-        }
-        List<PreBlock> preblocks = produced.get(0);
-        List<String> outputOrder = new ArrayList<>();
-
-        for (int i = 1; i < nProc; i++) {
-            final List<PreBlock> output = produced.get(i);
-            assertEquals(87, output.size(), "Did not get all expected blocks on: " + i);
-            for (int j = 0; j < preblocks.size(); j++) {
-                if (output.size() <= j) {
-                    System.out.println(String.format("Agreement with: %s up to: %s", i, j));
-                    break;
-                }
-                var a = preblocks.get(j);
-                var b = output.get(j);
-                assertEquals(a.data().size(), b.data().size(), "Mismatch at block: " + j + " process: " + i);
-                for (int k = 0; k < a.data().size(); k++) {
-                    assertEquals(a.data().get(k), b.data().get(k),
-                                 "Mismatch at block: " + j + " unit: " + k + " process: " + i);
-                    outputOrder.add(new String(ByteMessage.parseFrom(a.data().get(k)).getContents().toByteArray()));
-                }
-                assertEquals(a.randomBytes(), b.randomBytes());
-            }
-        }
-        System.out.println();
-
-        ConsoleReporter.forRegistry(registry).convertRatesTo(TimeUnit.SECONDS).convertDurationsTo(TimeUnit.MILLISECONDS)
-                       .build().report();
     }
 }
